--- a/views/cars/create.ejs
+++ b/views/cars/create.ejs
@@ -49,47 +49,7 @@
                                             <form id="form-create-car" class="pt-3" action="/create-car" method="post">
                                                 <input id="userID" name="userID" value="<%= user.id%>" hidden />
                                                 <div class="row">
-                                                    <div class="col-lg-6">
-                                                        <div class="form-group">
-                                                            <label for="carBrand" class="required">Car
-                                                                Brand</label>
-
-                                                            <select id="brand" name="brand" required autofocus
-                                                                onchange="findModel(this.value)"
-                                                                class="form-control mb-3 form-control-lg js-example-basic-single w-100">
-                                                                <option value="">Select One</option>
-                                                                <% for(const make of allMakes) { %>
-                                                                <option value="<%= make.Make_Name%>">
-                                                                    <%= make.Make_Name%>
-                                                                </option>
-                                                                <% } %>
-                                                            </select>
-                                                        </div>
-                                                    </div>
-                                                    <div class="col-lg-6">
-
-                                                        <div class="form-group">
-                                                            <label for="carModel" class="required">Car
-                                                                Model</label>
-
-                                                            <select id="model" name="model" required
-                                                                class="form-control mb-3 form-control-lg js-example-basic-single w-100">
-                                                                <option value="">Select One</option>
-
-                                                            </select>
-                                                        </div>
-                                                    </div>
-                                                    <div class="col-lg-6">
-
-                                                        <div class="form-group">
-                                                            <label for="carPlate" class="required">Car
-                                                                Plate</label>
-
-                                                            <input type="text" id="carPlate" name="plate"
-                                                                class="form-control mb-3 form-control-lg text-uppercase"
-                                                                placeholder="Car Plate" autofocus required />
-                                                        </div>
-                                                    </div>
+                                                    <%- include('./formFields.ejs', {allMakes, car: null}); %>
                                                 </div>
                                                 <div class="row">
                                                     <div class="mt-3">
@@ -131,10 +91,8 @@
     <script src="../js/off-canvas.js"></script>
     <script src="../js/hoverable-collapse.js"></script>
     <script src="../js/template.js"></script>
-    <script src="../js/settings.js"></script>
-    <script src="../js/todolist.js"></script>
-
-    <script src="../js/cars.js"></script>
+    <!-- <script src="../js/settings.js"></script> -->
+    <!-- <script src="../js/todolist.js"></script> -->
 
     <!-- endinject -->
     <!-- Custom js for this page-->
