--- a/views/cars/edit.ejs
+++ b/views/cars/edit.ejs
@@ -14,9 +14,7 @@
     <link rel="stylesheet" href="../vendors/simple-line-icons/css/simple-line-icons.css">
     <link rel="stylesheet" href="../vendors/css/vendor.bundle.base.css">
     <link rel="stylesheet" href="../../css/register.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-        integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <link rel="stylesheet" href="../vendors/select2/select2.min.css">
     <link rel="stylesheet" href="../vendors/select2-bootstrap-theme/select2-bootstrap.min.css">
     <!-- endinject -->
@@ -48,47 +46,7 @@
                                                 method="post">
                                                 <input type="text" id="id" name="id" value="<%- car.id%>" hidden />
                                                 <div class="row">
-                                                    <div class="col-lg-6">
-                                                        <div class="form-group">
-                                                            <label for="carBrand" class="required">Car Brand</label>
-                                                            <select id="brand" name="brand" required
-                                                                onchange="findModel(this.value)"
-                                                                class="form-control mb-3 form-control-lg js-example-basic-single w-100">
-                                                                <option value="">Select One</option>
-                                                                <% for(const make of allMakes) { %>
-                                                                <% var selected = (make.Make_Name === car.brand.toUpperCase()) ? "selected" : "";   %>
-
-                                                                <option value="<%= make.Make_Name%>" <%= selected%>>
-                                                                    <%= make.Make_Name%>
-                                                                </option>
-                                                                <% } %>
-                                                            </select>
-                                                        </div>
-                                                    </div>
-                                                    <div class="col-lg-6">
-                                                        <div class="form-group">
-                                                            <label for="carModel" class="required">Car
-                                                                Model</label>
-                                                            <select id="model" name="model" required
-                                                                class="form-control mb-3 form-control-lg js-example-basic-single w-100">
-                                                                <option value="">Select One</option>
-
-                                                            </select>
-                                                        </div>
-                                                    </div>
-                                                    <div class="col-lg-6">
-                                                        <div class="form-group">
-                                                            <label for="carPlate" class="required">Car
-                                                                Plate</label>
-
-                                                            <input value="<%- car.plate%>" type="text" id="carPlate"
-                                                                name="plate"
-                                                                class="form-control mb-3 form-control-lg text-uppercase"
-                                                                placeholder="Car Plate" autofocus required />
-                                                        </div>
-                                                    </div>
-                                                    <div class="col-lg-6">
-                                                    </div>
+                                                    <%- include('./formFields.ejs', {allMakes, car}); %>
                                                 </div>
                                                 <div class="row">
                                                     <div class="mt-3">
@@ -132,19 +90,16 @@
     <script src="../js/off-canvas.js"></script>
     <script src="../js/hoverable-collapse.js"></script>
     <script src="../js/template.js"></script>
-    <script src="../js/settings.js"></script>
-    <script src="../js/todolist.js"></script>
-
-    <script src="../js/cars.js"></script>
-
+    <!-- <script src="../js/settings.js"></script> -->
+    <!-- <script src="../js/todolist.js"></script> -->
     <!-- endinject -->
     <!-- Custom js for this page-->
 
     <script type="text/javascript" src="https://js.stripe.com/v3/"></script>
     <script type="text/javascript" src="../js/account.js"></script>
     <script src="../js/jquery.cookie.js" type="text/javascript"></script>
-    <script src="../js/dashboard.js"></script>
-    <script src="../js/Chart.roundedBarCharts.js"></script>
+    <!-- <script src="../js/dashboard.js"></script> -->
+    <!-- <script src="../js/Chart.roundedBarCharts.js"></script> -->
     <script src="../vendors/select2/select2.min.js"></script>
     <script src="../js/select2.js"></script>
 
