--- a/views/ajaxSnippets/validationResult.ejs
+++ b/views/ajaxSnippets/validationResult.ejs
@@ -84,7 +84,7 @@
                         </p>
                         <br>
                         <div class="mt-3 mb-3">
-                            <button id="use-service-button" user-id="<%= customer?.id%>"
+                            <button id="use-service-button" user-id="<%= customer?.id%>" car-id="<%= car?.id%>"
                                 class="btn btn-block btn-primary btn-lg font-weight-medium btn-icon-text" type="submit">
                                 USE SERVICE
                                 <i class="menu-icon mdi mdi-car-wash btn-icon-apepend"></i>
