--- a/views/cars/formFields.ejs
+++ b/views/cars/formFields.ejs
@@ -42,6 +42,9 @@
 
         <input type="text" id="carPlate" name="plate" class="form-control mb-3 form-control-lg text-uppercase"
             placeholder="Car Plate" autofocus required value="<%= car?.plate%>" />
+
+        <div id="plateValidationResult"></div>
+
     </div>
 </div>
 
