Create Services route. Fix profile information (subscriptions and cars.)

--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -12,12 +12,12 @@
                 <span class="menu-title">Manage My Cars</span>
             </a>
         </li>
-        <!-- <li class="nav-item">
-            <a class="nav-link" href="/invoices">
+        <li class="nav-item">
+            <a class="nav-link" href="/services">
                 <i class="fa-solid fa-calendar menu-icon"></i>
-                <span class="menu-title">Invoices</span>
+                <span class="menu-title">My Services</span>
             </a>
-        </li> -->
+        </li>
         <li class="nav-item">
             <a class="nav-link" href="/charges">
                 <i class="fa-solid fa-clock-rotate-left menu-icon"></i>
