--- a/views/partials/subscriptions/information.ejs
+++ b/views/partials/subscriptions/information.ejs
@@ -1,3 +1,9 @@
+<div class="d-sm-flex justify-content-between align-items-start">
+    <div>
+        <h4 class="card-title card-title-dash">Subscriptions</h4>
+    </div>
+</div>
+<br>
 <div class="table-responsive  mt-1">
     <% if(showManageBtn) { %>
     <div class="d-sm-flex justify-content-between align-items-start float-end">
