--- a/views/user/view.ejs
+++ b/views/user/view.ejs
@@ -13,10 +13,7 @@
     <link rel="stylesheet" href="../vendors/typicons/typicons.css">
     <link rel="stylesheet" href="../vendors/simple-line-icons/css/simple-line-icons.css">
     <link rel="stylesheet" href="../vendors/css/vendor.bundle.base.css">
-    <link rel="stylesheet" href="../../css/register.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-        integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <!-- endinject -->
     <!-- Plugin css for this page -->
     <!-- <link rel="stylesheet" href="../vendors/datatables.net-bs4/dataTables.bootstrap4.css"> -->
@@ -40,20 +37,25 @@
             <!-- partial -->
             <div class="main-panel">
                 <div class="content-wrapper">
-                    <h4>
-                        <% if(isMyProfile) {%>
-                        My Profile
-                        <% } else { %>
-                        View User
-                        <% } %>
-                    </h4>
                     <% if(customer) { %>
                     <div class="row text-left">
                         <div class="col-lg-12 d-flex flex-column">
                             <div class="row flex-grow">
-                                <div class="col-6 grid-margin stretch-card">
+                                <div class="col-12 grid-margin stretch-card">
                                     <div class="card card-rounded">
                                         <div class="card-body">
+                                            <div class="d-sm-flex justify-content-between align-items-start">
+                                                <div>
+                                                    <h4 class="card-title card-title-dash">
+                                                        <% if(isMyProfile) {%>
+                                                        My Profile
+                                                        <% } else { %>
+                                                        View User
+                                                        <% } %></h4>
+                                                </div>
+                                            </div>
+                                            <br>
+
                                             <div class="table-responsive mt-1">
                                                 <div
                                                     class="d-sm-flex justify-content-between align-items-start float-end">
@@ -135,10 +137,16 @@
                                     </div>
                                 </div>
                                 <% } %>
-                                <% if(!isMyProfile && customer?.cars?.length > 0) { %>
+                                <% if(cars) { %>
                                 <div class="col-6 grid-margin stretch-card">
                                     <div class="card card-rounded">
                                         <div class="card-body">
+                                            <div class="d-sm-flex justify-content-between align-items-start">
+                                                <div>
+                                                    <h4 class="card-title card-title-dash">Cars</h4>
+                                                </div>
+                                            </div>
+                                            <br>
                                             <div class="table-responsive  mt-1">
                                                 <% let enableActions = (user.role === roles.ADMIN || customer.services.length < 1) %>
                                                 <table id="users" class="table table-hover stripe">
@@ -153,8 +161,8 @@
                                                         </tr>
                                                     </thead>
                                                     <tbody>
-                                                        <% if(customer.cars) { %>
-                                                        <% for(car of customer.cars) { %>
+                                                        <% if(cars) { %>
+                                                        <% for(car of cars) { %>
                                                         <tr>
                                                             <td>
                                                                 <a class="btn-link"
@@ -215,21 +223,8 @@
     <script src="../js/off-canvas.js"></script>
     <script src="../js/hoverable-collapse.js"></script>
     <script src="../js/template.js"></script>
-    <script src="../js/settings.js"></script>
-    <script src="../js/todolist.js"></script>
-    <!-- endinject -->
-    <!-- Custom js for this page-->
-    <!-- <script>
-        var customer = <%# JSON.stringify(customer) %>;
-        console.log(customer);
-    </script> -->
     <script type="text/javascript" src="https://js.stripe.com/v3/"></script>
-    <script type="text/javascript" src="../js/account.js"></script>
     <script src="../js/jquery.cookie.js" type="text/javascript"></script>
-    <script src="../js/dashboard.js"></script>
-    <script src="../js/Chart.roundedBarCharts.js"></script>
-    <script src="../../js/register.js"></script>
-
     <!-- End custom js for this page-->
 
     <!-- Alerts Code -->
