--- a/views/index.ejs
+++ b/views/index.ejs
@@ -116,8 +116,11 @@
                             </div>
                             <div class="card-footer text-center"
                                 style="background-color:transparent !important; border-top: none">
-                                <button class="btn btn-primary btn-lg select-product-btn m-2"
-                                    value="<%- price.id%>">Create Subscriptions</button>
+                                <!-- <button class="btn btn-primary btn-lg select-product-btn m-2"
+                                    value="<%- price.id%>">Create Subscriptions</button> -->
+                                <a href="/create-subscriptions" class="btn btn-primary btn-lg m-2"
+                                    value="<%- price.id%>">Create
+                                    Subscriptions</a>
                             </div>
                         </div>
                     </div>
